@@ -3,10 +3,13 @@
 <document base_prefix="" namespace="rkward">
 	<components>
 		<component type="standard" id="simple_anova" file="simple_anova/description.xml" label="Simple Anova" />
+		<component type="standard" id="sieve_plot" file="plots/sieve_plot.xml" label="Extended Sieve Plot" />
+		<component type="standard" id="generate_random" file="data/generate_random.xml" label="Generate random data" />
+
+<!-- These are purely for testing: -->
 		<component type="standard" id="qtscript_test1" file="testing/test1.xml" label="QtScript Test 1" />
 		<component type="standard" id="qtscript_test2" file="testing/test2.xml" label="QtScript Test 2" />
-		<component type="standard" id="sieve_plot" file="plots/sieve_plot.xml" label="Extended Sieve Plot" />
-
+<!-- End -->
 	</components>
 
 	<hierarchy>
@@ -17,6 +20,9 @@
 			</menu>
 			<menu id="export" label="Export" index="5">
 			</menu>
+		</menu>
+		<menu id="data" label="Data" index="3">
+			<entry component="generate_random" index="9"/>
 		</menu>
 		<menu id="analysis" label="Analysis" index="4">
 			<entry component="simple_anova" index="9"/>
